--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <ul>
             <li><a href="/">Accueil</a></li>
             <li><a href="mes-experiences-professionnelles.html">Mes Expériences professionnelles</a></li>
-            <li><a href="mes-diplomes.html">Mes diplômes</a></li>
-            <li><a href="mes-competences.html">Mes Compétences</a></li>
-            <li><a href="mes-realisations.html">Mes réalisations</a></li>
-            <li><a href="mes-centres-d-interet.html">Mes Centres d'intérêt</a></li>
+            <li><a href="mes-diplomes.html">Diplômes</a></li>
+            <li><a href="mes-competences.html">Compétences</a></li>
+            <li><a href="mes-realisations.html">Réalisations</a></li>
+            <li><a href="mes-centres-d-interet.html">Centres d'intérêt</a></li>
         </ul>
     </nav>
     <header>
