changement menu dans toutes les pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="/">Accueil</a></li>
-            <li><a href="mes-experiences-professionnelles.html">Mes Expériences professionnelles</a></li>
+            <li><a href="mes-experiences-professionnelles.html">Expériences professionnelles</a></li>
             <li><a href="mes-diplomes.html">Diplômes</a></li>
             <li><a href="mes-competences.html">Compétences</a></li>
             <li><a href="mes-realisations.html">Réalisations</a></li>
