Correction du bouton DL CV

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <li><strong>Adresse:</strong> Pouillé (86)</li>
                         </ul>
                     </div>
-                    <button><a href="CV-Cyrielle-2021.pdf" title="CV-Cyrielle-2021"></a>Télécharger mon CV</button>
+                    <button><a href="CV-Cyrielle-2021.pdf" title="CV-Cyrielle-2021" target="blank">Télécharger mon CV</a></button>
                 </div>
             </div>
         </section>
