Mise à jour du texte

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <article>
                         <i class="fab fa-html5 fa-3x"></i>
                         <h4>HTML 5</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores modi optio error nulla officiis dolor provident magnam maiores velit, beatae dicta sint repudiandae voluptatum, itaque ducimus? Dicta eos quidem eligendi?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores modi optio error nulla officiis dolor provident magnam maiores velit, beatae dicta sint repudiandae voluptatum, itaque ducimus? Dicta eos quidem eligendi?</p>
                     </article>
                     <article>
                         <i class="fab fa-css3-alt fa-3x"></i>
